syntax = "proto3";

package flow.services.collect;

option go_package = "collect";

import "shared/messages.proto";


service CollectService {
  rpc Ping(PingRequest) returns (PingResponse);

  rpc SubmitTransaction (SubmitTransactionRequest) returns (SubmitTransactionResponse);

  rpc SubmitCollection (SubmitCollectionRequest) returns (SubmitCollectionResponse);

  rpc GetTransaction (GetTransactionRequest) returns (GetTransactionResponse);

  rpc GetCollection (GetCollectionRequest) returns (GetCollectionResponse);
}


message PingRequest {}

message PingResponse {
  bytes address = 1;
}

message SubmitTransactionRequest {
  flow.shared.messages.SignedTransaction transaction = 1;
}
  
message SubmitTransactionResponse {}

message SubmitCollectionRequest {
  flow.shared.messages.Collection collection = 1;
  bytes accessSignature = 2;
}
  
message SubmitCollectionResponse {
  bytes accessSignature = 1;
}

message GetTransactionRequest {
  bytes transactionHash = 1;
}

message GetTransactionResponse {
  flow.shared.messages.SignedTransaction transaction = 1;
}

message GetCollectionRequest {
  bytes collectionHash = 1;
}

message GetCollectionResponse {
  flow.shared.messages.Collection collection = 1;
}
